enhanced nav bar

--- a/client/src/app/components/assessment/assessment.component.html
+++ b/client/src/app/components/assessment/assessment.component.html
@@ -1,1 +1,78 @@
-<app-nav></app-nav>
+<header>
+  <app-nav></app-nav>
+</header>
+<body>
+  <article>
+    <div class="quiz-header">
+      <h2>Introduction to logistics quiz</h2>
+      <p class="marks">45/60 marks</p>
+      <p class="timer">40:23 left</p>
+      <button class="btn btn-primary p-1">Submit</button>
+    </div>
+    <div class="quiz-body">
+      <div class="question">
+        <div class="question-group">
+          <p class="question-text">1. What is Logistics?</p>
+          <p class="marks">2 marks</p>
+        </div>
+
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer wrong">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer correct">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="question">
+        <div class="question-group">
+          <p class="question-text">2. What is Logistics?</p>
+          <p class="marks">2 marks</p>
+        </div>
+
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer correct">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+      </div>
+    </div>
+  </article>
+</body>
