--- a/client/src/app/components/student-dashboard/student-dashboard.component.html
+++ b/client/src/app/components/student-dashboard/student-dashboard.component.html
@@ -126,7 +126,7 @@
       </div>
     </aside>
     <main class="content" id="content">
-      <article>
+      <article id="Announcements">
         <h2 class="mt-3">Announcements</h2>
         <div class="content-container">
           <div class="header">
@@ -204,7 +204,7 @@
           </div>
         </div>
       </article>
-      <article>
+      <article id="MyCourses">
         <h2>My Courses</h2>
         <div class="content-container">
           <div class="header">
@@ -337,7 +337,7 @@
           </div>
         </div>
       </article>
-      <article>
+      <article id="Calendar">
         <h2>My Calendar</h2>
         <div class="content-container">
           <div class="header">
