--- a/client/src/app/components/assignment/assignment.component.html
+++ b/client/src/app/components/assignment/assignment.component.html
@@ -58,29 +58,36 @@
     <table class="table table-responsive-sm table-outline mb-0">
       <thead class="thead-light">
         <tr>
-          <th>Recording Name</th>
+          <th>Submission Status</th>
           <td>
-            <a class="link" href="#"
-              >Week 1 Lecture 1: Introduction to the Supply Chain</a
-            >
+            <label>Not submitted</label>
+          </td>
+        </tr>
+        <tr>
+          <th>Grading Status</th>
+          <td>
+            <label>Not graded</label>
+          </td>
+        </tr>
+        <tr>
+          <th>Due Date</th>
+          <td>
+            <label>24/10/2022 19:00:00</label>
+          </td>
+        </tr>
+        <tr>
+          <th>Time Remaining</th>
+          <td>
+            <label>17 days 51 mins 22 secs</label>
+          </td>
+        </tr>
+        <tr>
+          <th>Last Modified</th>
+          <td>
+            <label>Not modified</label>
           </td>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td>
-            <a class="link" href="#"
-              >Week 1 Lecture 1: Introduction to the Supply Chain</a
-            >
-          </td>
-          <td>
-            <label>55:32</label>
-          </td>
-          <td>
-            <label>22/10/2022</label>
-          </td>
-        </tr>
-      </tbody>
     </table>
 
     <h3>My Submission</h3>
