--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -26,14 +26,14 @@
             class="form"
           >
             <div class="form-group">
-              <label>Student ID</label>
-              <label for="email" class="sr-only">Email</label>
+              <label>Student / Staff ID</label>
+              <label for="id" class="sr-only">ID</label>
               <app-text-input
-                [type]="'email'"
-                id="'email'"
+                [type]="'text'"
+                id="'id'"
                 [formControl]="signinForm.controls['accountId']"
-                [label]="'email'"
-                [placeholder]="'Email'"
+                [label]="'id'"
+                [placeholder]="'ID'"
               ></app-text-input>
             </div>
             <div class="form-group">
