Source control some work

--- a/client/src/app/components/course-staff/course-staff.component.html
+++ b/client/src/app/components/course-staff/course-staff.component.html
@@ -173,9 +173,99 @@
     </div>
     <hr />
     <div class="article-box-block">
-      <a class="link" href="#">Test 2</a>
-      <a class="link" href="#">Quiz 4</a>
-      <a class="link" href="#">Unitrans Case Study</a>
+      <button class="btn btn-success mr-2">Create new assignment</button>
+      <button class="btn btn-success">Create new assessment</button>
+      <hr />
+      <div class="a-group">
+        <button class="file-button">
+          <svg class="file-button-icon" viewBox="0 0 473 473">
+            <g>
+              <path
+                d="M317.667,214.42l5.667-86.42h20.951V38h-98.384V0H132.669v38H34.285v90h20.951l20,305h140.571   c23.578,24.635,56.766,40,93.478,40c71.368,0,129.43-58.062,129.43-129.43C438.715,275.019,385.143,218.755,317.667,214.42z    M162.669,30h53.232v8h-53.232V30z M64.285,68h250v30h-250V68z M103.334,403L85.301,128H293.27l-5.77,87.985   c-61.031,10.388-107.645,63.642-107.645,127.586c0,21.411,5.231,41.622,14.475,59.43H103.334z M309.285,443   c-54.826,0-99.43-44.604-99.43-99.43s44.604-99.429,99.43-99.429s99.43,44.604,99.43,99.429S364.111,443,309.285,443z"
+              />
+              <polygon
+                points="342.248,289.395 309.285,322.358 276.322,289.395 255.109,310.608 288.072,343.571 255.109,376.533    276.322,397.746 309.285,364.783 342.248,397.746 363.461,376.533 330.498,343.571 363.461,310.608  "
+              />
+            </g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+          </svg>
+        </button>
+        <a class="link" href="#">Test 2</a>
+      </div>
+      <div class="a-group">
+        <button class="file-button">
+          <svg class="file-button-icon" viewBox="0 0 473 473">
+            <g>
+              <path
+                d="M317.667,214.42l5.667-86.42h20.951V38h-98.384V0H132.669v38H34.285v90h20.951l20,305h140.571   c23.578,24.635,56.766,40,93.478,40c71.368,0,129.43-58.062,129.43-129.43C438.715,275.019,385.143,218.755,317.667,214.42z    M162.669,30h53.232v8h-53.232V30z M64.285,68h250v30h-250V68z M103.334,403L85.301,128H293.27l-5.77,87.985   c-61.031,10.388-107.645,63.642-107.645,127.586c0,21.411,5.231,41.622,14.475,59.43H103.334z M309.285,443   c-54.826,0-99.43-44.604-99.43-99.43s44.604-99.429,99.43-99.429s99.43,44.604,99.43,99.429S364.111,443,309.285,443z"
+              />
+              <polygon
+                points="342.248,289.395 309.285,322.358 276.322,289.395 255.109,310.608 288.072,343.571 255.109,376.533    276.322,397.746 309.285,364.783 342.248,397.746 363.461,376.533 330.498,343.571 363.461,310.608  "
+              />
+            </g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+          </svg>
+        </button>
+        <a class="link" href="#">Quiz 4</a>
+      </div>
+      <div class="a-group">
+        <button class="file-button">
+          <svg class="file-button-icon" viewBox="0 0 473 473">
+            <g>
+              <path
+                d="M317.667,214.42l5.667-86.42h20.951V38h-98.384V0H132.669v38H34.285v90h20.951l20,305h140.571   c23.578,24.635,56.766,40,93.478,40c71.368,0,129.43-58.062,129.43-129.43C438.715,275.019,385.143,218.755,317.667,214.42z    M162.669,30h53.232v8h-53.232V30z M64.285,68h250v30h-250V68z M103.334,403L85.301,128H293.27l-5.77,87.985   c-61.031,10.388-107.645,63.642-107.645,127.586c0,21.411,5.231,41.622,14.475,59.43H103.334z M309.285,443   c-54.826,0-99.43-44.604-99.43-99.43s44.604-99.429,99.43-99.429s99.43,44.604,99.43,99.429S364.111,443,309.285,443z"
+              />
+              <polygon
+                points="342.248,289.395 309.285,322.358 276.322,289.395 255.109,310.608 288.072,343.571 255.109,376.533    276.322,397.746 309.285,364.783 342.248,397.746 363.461,376.533 330.498,343.571 363.461,310.608  "
+              />
+            </g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+          </svg>
+        </button>
+        <a class="link" href="#">Unitrans Case Study</a>
+      </div>
     </div>
   </article>
   <article>
@@ -207,6 +297,11 @@
       <h2 class="article-header-text">Prescribed Text</h2>
     </div>
     <hr />
+    <form class="file-input">
+      <input type="file" class="form-control" />
+      <button class="btn btn-primary ml-1">Upload</button>
+    </form>
+    <hr />
     <div class="article-box">
       <app-file-preview></app-file-preview>
       <app-file-preview></app-file-preview>
@@ -216,6 +311,91 @@
       <app-file-preview></app-file-preview>
       <app-file-preview></app-file-preview>
       <app-file-preview></app-file-preview>
+    </div>
+  </article>
+  <article>
+    <div class="article-header">
+      <svg viewBox="0 0 487.586 487.586" class="article-header-icon">
+        <g>
+          <g>
+            <circle cx="82.573" cy="294.182" r="60.937" />
+            <circle cx="243.771" cy="294.182" r="60.937" />
+            <circle cx="404.948" cy="294.182" r="60.937" />
+            <path
+              d="M404.948,361.267c-39.518,0-72.435,26.661-80.567,62.404c-8.111-35.635-41.049-62.404-80.61-62.404    c-39.539,0-72.478,26.661-80.567,62.404c-8.132-35.635-41.071-62.404-80.61-62.404C36.972,361.267,0,396.816,0,440.669v44.091    h487.586v-44.091C487.586,396.816,450.592,361.267,404.948,361.267L404.948,361.267z"
+            />
+            <path
+              d="M325.719,115.814c-33.629,0-60.873,27.309-60.873,60.937s27.287,60.959,60.873,60.959    c33.737,0,60.981-27.33,60.981-60.959S359.456,115.814,325.719,115.814z"
+            />
+            <circle cx="161.781" cy="176.773" r="60.959" />
+            <circle cx="243.793" cy="63.763" r="60.937" />
+          </g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+          <g></g>
+        </g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+      </svg>
+      <h2 class="article-header-text">Students</h2>
+    </div>
+    <hr />
+    <div class="article-box-bloc table">
+      <table class="table table-responsive-sm table-outline mb-0">
+        <thead class="thead-light">
+          <tr>
+            <th>Student Name</th>
+            <th>Student ID</th>
+            <th>Grade Average</th>
+            <th>Level</th>
+            <th>Grade</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <label>Yewo Theu</label>
+            </td>
+            <td>
+              <label>201903550</label>
+            </td>
+            <td>
+              <label>67.5%</label>
+            </td>
+            <td>
+              <label>Level 400</label>
+            </td>
+            <td>
+              <button class="btn btn-success">Grade</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </article>
   <article>
@@ -265,6 +445,8 @@
       <table class="table table-responsive-sm table-outline mb-0">
         <thead class="thead-light">
           <tr>
+            <th>Student Name</th>
+            <th>Student ID</th>
             <th>Assessment / Assignment</th>
             <th>Grade</th>
             <th>Class Average</th>
@@ -274,6 +456,12 @@
         </thead>
         <tbody>
           <tr>
+            <td>
+              <label>Yewo Theu</label>
+            </td>
+            <td>
+              <label>201903550</label>
+            </td>
             <td>
               <a class="link" href="#">Test 1</a>
             </td>
@@ -288,6 +476,77 @@
             </td>
             <td>
               <label>22/10/2022</label>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </article>
+  <article>
+    <div class="article-header">
+      <svg viewBox="0 0 488 488" class="article-header-icon">
+        <g transform="translate(0 -540.36)">
+          <g>
+            <g>
+              <path
+                d="M448.9,666.06c0-0.1-0.1-0.3-0.1-0.4c0-0.2-0.1-0.3-0.1-0.5c0-0.1-0.1-0.3-0.1-0.4c-0.1-0.2-0.1-0.3-0.2-0.5     c0-0.1-0.1-0.3-0.1-0.4c-0.1-0.3-0.2-0.5-0.4-0.8c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.2-0.2-0.3-0.3-0.5c-0.1-0.1-0.1-0.2-0.2-0.3     c-0.1-0.1-0.1-0.2-0.2-0.3l-90-117.4l-0.1-0.1c-0.2-0.2-0.3-0.4-0.5-0.6c-0.1-0.1-0.1-0.2-0.2-0.2c-0.2-0.3-0.5-0.5-0.8-0.7     c0,0,0,0-0.1-0.1c-0.3-0.2-0.5-0.4-0.8-0.6c-0.1-0.1-0.2-0.1-0.3-0.2c-0.2-0.1-0.4-0.3-0.7-0.4c-0.1,0-0.2-0.1-0.3-0.1     c-0.2-0.1-0.5-0.2-0.7-0.3c-0.1,0-0.2-0.1-0.3-0.1c-0.2-0.1-0.5-0.2-0.7-0.2c-0.1,0-0.2-0.1-0.3-0.1c-0.3-0.1-0.5-0.1-0.8-0.1     c-0.1,0-0.2,0-0.3,0c-0.4,0-0.7-0.1-1.1-0.1H49c-5.5,0-10,4.5-10,10v468c0,5.5,4.5,10,10,10h390c5.5,0,10-4.5,10-10v-350.6     c0-0.2,0-0.5,0-0.8v0c0-0.1,0-0.2,0-0.3C449,666.46,448.9,666.26,448.9,666.06z M418.7,657.86h-59.5l-0.2-77.8L418.7,657.86z      M429,1008.46H59v-448h280l0.2,107.4c0,5.5,4.5,10,10,10H429V1008.46z"
+              />
+              <path
+                d="M101.3,723.46c0,5.5,4.5,10,10,10h266.2c5.5,0,10-4.5,10-10s-4.5-10-10-10H111.3C105.8,713.46,101.3,717.96,101.3,723.46     z"
+              />
+              <path
+                d="M111.3,672.46h173.9h0c5.5,0,9.9-4.5,9.9-10s-4.5-10-10-10H111.3c-5.5,0-10,4.5-10,10S105.8,672.46,111.3,672.46z"
+              />
+              <path
+                d="M111.3,794.46h266.2c5.5,0,10-4.5,10-10s-4.5-10-10-10H111.3c-5.5,0-10,4.5-10,10S105.8,794.46,111.3,794.46z"
+              />
+              <path
+                d="M285.2,855.46c5.5,0,9.9-4.5,9.9-10s-4.5-10-10-10H111.3c-5.5,0-10,4.5-10,10s4.5,10,10,10H285.2L285.2,855.46z"
+              />
+              <path
+                d="M370.9,868.26l-84.2,74.4l-24.3-32.5c-3.3-4.4-9.6-5.3-14-2c-4.4,3.3-5.3,9.6-2,14l30.8,41.2c1.7,2.3,4.2,3.7,7,4     c0.3,0.1,0.7,0.1,1,0.1l0,0c2.4,0,4.7-0.9,6.6-2.6l92.3-81.6c4.2-3.6,4.6-10,0.9-14.1C381.4,864.96,375,864.56,370.9,868.26z"
+              />
+            </g>
+          </g>
+        </g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+        <g></g>
+      </svg>
+      <h2 class="article-header-text">Submitted Assignments</h2>
+    </div>
+    <hr />
+    <div class="article-box-bloc table">
+      <table class="table table-responsive-sm table-outline mb-0">
+        <thead class="thead-light">
+          <tr>
+            <th>Student IDs</th>
+            <th>Assignment</th>
+            <th>Grade</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <label>201903550, 20184200, 20179240</label>
+            </td>
+            <td>
+              <a class="link" href="#">Case Study 1</a>
+            </td>
+            <td>
+              <button class="btn btn-success">Grade</button>
             </td>
           </tr>
         </tbody>
@@ -393,13 +652,44 @@
     </div>
     <hr />
     <div class="article-box-block">
-      <p class="article-box-subheading">Links</p>
+      <p class="article-box-subheading mb-1">
+        Links <button class="btn btn-success">Add Link</button>
+      </p>
       <hr class="article-rule" />
-      <a class="link" href="#">Resource 1</a>
-      <a class="link" href="#">Resource 2</a>
-      <a class="link" href="#">Resource 3</a>
+      <div class="a-group">
+        <button class="file-button">
+          <svg class="file-button-icon" viewBox="0 0 473 473">
+            <g>
+              <path
+                d="M317.667,214.42l5.667-86.42h20.951V38h-98.384V0H132.669v38H34.285v90h20.951l20,305h140.571   c23.578,24.635,56.766,40,93.478,40c71.368,0,129.43-58.062,129.43-129.43C438.715,275.019,385.143,218.755,317.667,214.42z    M162.669,30h53.232v8h-53.232V30z M64.285,68h250v30h-250V68z M103.334,403L85.301,128H293.27l-5.77,87.985   c-61.031,10.388-107.645,63.642-107.645,127.586c0,21.411,5.231,41.622,14.475,59.43H103.334z M309.285,443   c-54.826,0-99.43-44.604-99.43-99.43s44.604-99.429,99.43-99.429s99.43,44.604,99.43,99.429S364.111,443,309.285,443z"
+              />
+              <polygon
+                points="342.248,289.395 309.285,322.358 276.322,289.395 255.109,310.608 288.072,343.571 255.109,376.533    276.322,397.746 309.285,364.783 342.248,397.746 363.461,376.533 330.498,343.571 363.461,310.608  "
+              />
+            </g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+            <g></g>
+          </svg>
+        </button>
+        <a class="link" href="#">Resource 1</a>
+      </div>
 
-      <p class="article-box-subheading">Files</p>
+      <p class="article-box-subheading mb-1">
+        Files <button class="btn btn-success">Add File</button>
+      </p>
       <hr class="article-rule" />
       <div class="files">
         <div class="file">
@@ -440,105 +730,15 @@
               <g></g>
             </svg>
           </button>
-        </div>
-        <div class="file">
-          <svg class="drive-icon" viewBox="0 0 16 16">
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M13.71 4.29l-3-3L10 1H4L3 2v12l1 1h9l1-1V5l-.29-.71zM13 14H4V2h5v4h4v8zm-3-9V2l3 3h-3z"
-            />
-          </svg>
-          <p class="drive-name-text">MGT 400 Chapter 2.pdf</p>
           <button class="file-button">
-            <svg class="file-button-icon" viewBox="0 0 485 485">
+            <svg class="file-button-icon" viewBox="0 0 473 473">
               <g>
-                <g>
-                  <path
-                    d="M426.5,458h-368C51,458,45,464,45,471.5S51,485,58.5,485h368c7.5,0,13.5-6,13.5-13.5S434,458,426.5,458z"
-                  />
-                  <path
-                    d="M233,378.7c2.5,2.5,6,4,9.5,4s7-1.4,9.5-4l107.5-107.5c5.3-5.3,5.3-13.8,0-19.1c-5.3-5.3-13.8-5.3-19.1,0L256,336.5v-323    C256,6,250,0,242.5,0S229,6,229,13.5v323l-84.4-84.4c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1L233,378.7z"
-                  />
-                </g>
-              </g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-            </svg>
-          </button>
-        </div>
-        <div class="file">
-          <svg class="drive-icon" viewBox="0 0 16 16">
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M13.71 4.29l-3-3L10 1H4L3 2v12l1 1h9l1-1V5l-.29-.71zM13 14H4V2h5v4h4v8zm-3-9V2l3 3h-3z"
-            />
-          </svg>
-          <p class="drive-name-text">MGT 400 Chapter 3.pdf</p>
-          <button class="file-button">
-            <svg class="file-button-icon" viewBox="0 0 485 485">
-              <g>
-                <g>
-                  <path
-                    d="M426.5,458h-368C51,458,45,464,45,471.5S51,485,58.5,485h368c7.5,0,13.5-6,13.5-13.5S434,458,426.5,458z"
-                  />
-                  <path
-                    d="M233,378.7c2.5,2.5,6,4,9.5,4s7-1.4,9.5-4l107.5-107.5c5.3-5.3,5.3-13.8,0-19.1c-5.3-5.3-13.8-5.3-19.1,0L256,336.5v-323    C256,6,250,0,242.5,0S229,6,229,13.5v323l-84.4-84.4c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1L233,378.7z"
-                  />
-                </g>
-              </g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-              <g></g>
-            </svg>
-          </button>
-        </div>
-        <div class="file">
-          <svg class="drive-icon" viewBox="0 0 16 16">
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M13.71 4.29l-3-3L10 1H4L3 2v12l1 1h9l1-1V5l-.29-.71zM13 14H4V2h5v4h4v8zm-3-9V2l3 3h-3z"
-            />
-          </svg>
-          <p class="drive-name-text">MGT 400 Chapter 3.pdf</p>
-          <button class="file-button">
-            <svg class="file-button-icon" viewBox="0 0 485 485">
-              <g>
-                <g>
-                  <path
-                    d="M426.5,458h-368C51,458,45,464,45,471.5S51,485,58.5,485h368c7.5,0,13.5-6,13.5-13.5S434,458,426.5,458z"
-                  />
-                  <path
-                    d="M233,378.7c2.5,2.5,6,4,9.5,4s7-1.4,9.5-4l107.5-107.5c5.3-5.3,5.3-13.8,0-19.1c-5.3-5.3-13.8-5.3-19.1,0L256,336.5v-323    C256,6,250,0,242.5,0S229,6,229,13.5v323l-84.4-84.4c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1L233,378.7z"
-                  />
-                </g>
+                <path
+                  d="M317.667,214.42l5.667-86.42h20.951V38h-98.384V0H132.669v38H34.285v90h20.951l20,305h140.571   c23.578,24.635,56.766,40,93.478,40c71.368,0,129.43-58.062,129.43-129.43C438.715,275.019,385.143,218.755,317.667,214.42z    M162.669,30h53.232v8h-53.232V30z M64.285,68h250v30h-250V68z M103.334,403L85.301,128H293.27l-5.77,87.985   c-61.031,10.388-107.645,63.642-107.645,127.586c0,21.411,5.231,41.622,14.475,59.43H103.334z M309.285,443   c-54.826,0-99.43-44.604-99.43-99.43s44.604-99.429,99.43-99.429s99.43,44.604,99.43,99.429S364.111,443,309.285,443z"
+                />
+                <polygon
+                  points="342.248,289.395 309.285,322.358 276.322,289.395 255.109,310.608 288.072,343.571 255.109,376.533    276.322,397.746 309.285,364.783 342.248,397.746 363.461,376.533 330.498,343.571 363.461,310.608  "
+                />
               </g>
               <g></g>
               <g></g>
@@ -572,6 +772,8 @@
     </div>
     <hr />
     <div class="article-box-bloc table">
+      <button class="btn btn-success">Add a recording</button>
+      <hr />
       <table class="table table-responsive-sm table-outline mb-0">
         <thead class="thead-light">
           <tr>
@@ -602,7 +804,7 @@
   </article>
   <aside>
     <div class="join-class">
-      <button class="join-class-btn">Join</button>
+      <button class="join-class-btn">Create</button>
       <p class="join-class-text">MGL 201 Meeting Now</p>
     </div>
   </aside>
