--- a/client/src/app/components/calendar/calendar.component.html
+++ b/client/src/app/components/calendar/calendar.component.html
@@ -1,1 +1,6 @@
-<ejs-schedule> </ejs-schedule>
+<ejs-schedule
+  #scheduleObj
+  (created)="onCreated()"
+  [eventSettings]="eventSettings"
+>
+</ejs-schedule>
