--- a/client/src/app/components/file-preview/file-preview.component.css
+++ b/client/src/app/components/file-preview/file-preview.component.css
@@ -30,3 +30,50 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+.drive-icon {
+  fill: #444;
+  width: 40px;
+  width: 40px;
+}
+
+.drive-name-text {
+  margin: 0;
+  font-weight: bold;
+  margin: auto 0;
+  margin-left: 0.35rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.drive-rule {
+  width: 95%;
+  margin: 0 auto;
+}
+
+.drive-header-title {
+  margin: 0;
+  margin-top: 1rem;
+  margin-left: 2rem;
+  font-size: 1.4rem;
+}
+
+.file-button {
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  margin: 0 0.1rem;
+}
+
+.file-button:hover {
+  background-color: rgb(0, 0, 0, 0.1);
+}
+
+.file-button-icon {
+  fill: #444;
+  width: 30px;
+  height: 30px;
+}
