--- a/client/src/app/components/login/login.component.css
+++ b/client/src/app/components/login/login.component.css
@@ -91,6 +91,29 @@ canvas {
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
+@media screen and (max-width: 600px) {
+  .form-header {
+    background-color: #2734ec;
+    width: 100%;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
+
+  .form-body {
+    background-color: #fff;
+    opacity: 0.95;
+    width: 100%;
+    border-radius: 0 0 0.5rem 0.5rem;
+  }
+
+  .form-container {
+    display: block;
+    box-shadow: 1px 1px 20px rgb(0, 0, 0, 0.25);
+    width: 90%;
+    margin: 2em auto;
+    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+  }
+}
+
 .form-header-text {
   color: #fff;
   font-weight: bold;
